--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -23,12 +23,15 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore dependencies
-      # Путь к твоему основному проекту (проверь, чтобы папка называлась именно так в репозитории)
-      run: dotnet restore Lab44/Lab4.csproj
+      # Ищем любой .csproj в папке Lab44 и в папке тестов
+      run: |
+        dotnet restore Lab44/*.csproj
+        dotnet restore AdvertisementServiceMVC2.Tests/*.csproj
 
     - name: Build
-      run: dotnet build Lab44/Lab4.csproj --no-restore --configuration Release
+      # Собираем основной проект
+      run: dotnet build Lab44/*.csproj --configuration Release --no-restore
 
     - name: Run Unit Tests
-      # Запускаем только проект тестов, чтобы не было ошибки "Aborted"
-      run: dotnet test AdvertisementServiceMVC2.Tests/AdvertisementServiceMVC2.Tests.csproj --configuration Release --verbosity normal
+      # Запускаем тесты из папки тестов
+      run: dotnet test AdvertisementServiceMVC2.Tests/*.csproj --configuration Release --no-build --verbosity normal
